
- 0.25.0
    - Change the name of the supervisor app name
    - Added command 'propel -c' to create a new repository directory
        ie: propel -c mynewapp

- 0.24.0
    - Fixed missing 'exclude' in web options. 'exclude' takes precedence over 'remove'.
      If found, it will exclude it

- 0.23.0
    - added 'pip_options' to set pip options

- 0.22.6
    - Add test to see if 'propel-setup' has been setup
    - Set force_non_www to True by default

- 0.22.5
    - Fixed missing 'environment'
    - Reformat the result summary

- 0.22.4
    - Fixed missing data

- 0.22.0
    - bump version

- 0.21.0
    - rename 'deployapp' to 'propel'
    - rename $PYTHON to $PYTHON_ENV

- 0.20.0

    - Add maintenance page
    - Added more setup config in propel-setup
        - install nginx
        - install php-fpm
        - setup virtualenvwrapper
        -
    - no longer have 'exclude' option in web
    - change scripts into dict with multiple keys to run
    - new command
        --maintenance on | off
    - rename git command
        --git-init $repo_name
        --git-push-web $repo_name
        --git-push-cmd $repo_name '$cmd1' '$cmd2' '$cmd...'
    - short command
        -w => --website
        -s => --scripts
        -k => --workers
        -x => --undeploy
        -m => --maintenance


- 0.12.2
    - Small refactor. Use var application instead of checking if it's exist again

- 0.12.1
    - Added $CWD to refer to the current working directory

- 0.12.0
    - Change some git command name
        - '--git-init www' changed to '--on www --git-init'
        - '--git-push-deploy www' changed to '--on www --git-push-web'
        - '--git-push-no-deploy www' has been removed

    - Added new git command
        - '--on $repo_name --git-init' initiate the bare repo
        - '--on $repo_name --git-push-web' Deploy a web app on each push
        - '--on $repo_name --git-push-cmd '$cmd' ' Set a command to be executed on push